--- a/BMS.html
+++ b/BMS.html
@@ -227,7 +227,7 @@
       <div id="summarySection" class="mb-8 hidden">
         <h3 class="text-lg font-semibold text-light gray-1500 mb-4">Ringkasan Keseluruhan</h3>
         <div class="summary-card rounded-xl shadow-sm p-5">
-          <div class="grid grid-cols-4 md:grid-cols-5 gap-6 text-sm">
+          <div class="grid grid-cols-4 md:grid-cols-6 gap-6 text-sm">
             <div class="space-y-1">
               <i class="fa fa-bolt" style="color: yellow;"></i>
               <div class="text-light gray-1500">Total Tegangan</div>
@@ -252,6 +252,11 @@
               <i class="fa fa-bolt" style="color: red;"></i>
               <div class="text-light gray-1500">Total Daya</div>
               <div id="total-power" class="font-semibold text-white-2500">-</div>
+            </div>
+            <div class="space-y-1">
+              <i class="fa fa-temperature" style="color: pink;"></i>
+              <div class="text-light gray-1500">Total Temperatur Cell</div>
+              <div id="total-temperature" class="font-semibold text-white-2500">-</div>
             </div>
           </div>
         </div>
@@ -927,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
