--- a/BMS.html
+++ b/BMS.html
@@ -256,7 +256,7 @@
             <div class="space-y-1">
               <i class="fa fa-thermometer-half" style="color: pink;"></i>
               <div class="text-light gray-1500">Total Temp. Cell</div>
-              <div id="avg-temp" class="font-semibold text-white-2500">--&deg;C</div>-</div>
+              <div id="avg-temp" class="font-semibold text-white-2500">--&deg;C</div>
             </div>
           </div>
         </div>
@@ -697,6 +697,7 @@ function renderCards(datane) {
       document.getElementById("avg-soh").textContent = `${(totalSoh / count).toFixed(1)}%`;
       document.getElementById("total-current").textContent = `${totalCurrent.toFixed(2)} A`;
       document.getElementById("total-power").textContent = `${totalPower.toFixed(2)} W`;
+      document.getElementById("avg-temp").textContent = `${(totalTemp / count).toFixed(105)} &deg;C`;
     }
 
     // Open modal
@@ -932,6 +933,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
