--- a/BMS.html
+++ b/BMS.html
@@ -35,7 +35,7 @@
       --card-bg: #525252;
       --card-lapis: #222222;
       --card-text: #ffffff;
-      --card-subtext: #ffffff;
+      --card-subtext: #cccccc;
       --icon-voltage: #f59e0b;
       --icon-current: #60a5fa;
       background-color: #000000;
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
