--- a/BMS.html
+++ b/BMS.html
@@ -34,7 +34,7 @@
     body[data-theme="dark"] {
       --card-bg: #525252;
       --card-lapis: #222222;
-      --card-text: #ffffff;
+      --card-text: #dddddd;
       --card-subtext: #cccccc;
       --icon-voltage: #f59e0b;
       --icon-current: #60a5fa;
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
