--- a/BMS.html
+++ b/BMS.html
@@ -34,12 +34,12 @@
     body[data-theme="dark"] {
       --card-bg: #525252;
       --card-lapis: #222222;
-      --card-text: #dddddd;
-      --card-subtext: #cccccc;
+      --card-text: #ffffff;
+      --card-subtext: #ffffff;
       --icon-voltage: #f59e0b;
       --icon-current: #60a5fa;
       background-color: #000000;
-      color: ##f3f4f6;
+      color: #f3f4f6;
     }
     
     .battery-card {
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
