--- a/BMS.html
+++ b/BMS.html
@@ -227,7 +227,7 @@
       <div id="summarySection" class="mb-8 hidden">
         <h3 class="text-lg font-semibold text-light gray-850 mb-4">Ringkasan Keseluruhan</h3>
         <div class="summary-card rounded-xl shadow-sm p-5">
-          <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
+          <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-md">
             <div class="space-y-1">
               <i class="fa fa-bolt" style="color: yellow;"></i>
               <div class="text-light gray-1000">Total Tegangan</div>
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
