--- a/BMS.html
+++ b/BMS.html
@@ -218,7 +218,7 @@
     <div class="max-w-7xl mx-auto">
       <div class="mb-6 flex justify-between items-center">
         <h2 class="text-xl font-semibold text-white-900">Baterai Sistem 48V DC</h2>
-        <div class="text-sm text-white-1300">
+        <div class="text-lg text-white-1300">
           <span id="total-batteries">0</span> Baterai Terkoneksi
         </div>
       </div>
@@ -227,7 +227,7 @@
       <div id="summarySection" class="mb-8 hidden">
         <h3 class="text-lg font-semibold text-light gray-850 mb-4">Ringkasan Keseluruhan</h3>
         <div class="summary-card rounded-xl shadow-sm p-5">
-          <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-big">
+          <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-lg">
             <div class="space-y-1">
               <i class="fa fa-bolt" style="color: yellow;"></i>
               <div class="text-light gray-1000">Total Tegangan</div>
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
