--- a/BMS.html
+++ b/BMS.html
@@ -217,7 +217,7 @@
   <main class="flex-1 p-4 sm:p-6 w-full">
     <div class="max-w-7xl mx-auto">
       <div class="mb-6 flex justify-between items-center">
-        <h2 class="text-xl font-semibold text-white-900">Baterai Sistem 48V DC</h2>
+        <h2 class="text-xl font-semibold text-white-900">BATERAI SISTEM 48V DC</h2>
         <div class="text-lg text-white-1300">
           <span id="total-batteries">0</span> Baterai Terkoneksi
         </div>
@@ -272,7 +272,7 @@
   <!-- Footer -->
 <footer class="text-gray-300 py-4 w-full" style="background-color: #1f2937;">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 flex flex-col items-center text-center">
-    <div class="text-sm">
+    <div class="text-md">
       © 2025-2026 BMS Monitoring Sistem |
       <a href="https://wa.me/6285249402703" class="no-underline hover:text-white">
         Hubungi Developer
@@ -386,7 +386,7 @@
 
         <!-- Cell Voltages -->
         <div class="bg-gray-50 p-4 rounded-lg">
-          <h3 class="font-medium text-gray-700 mb-4 flex items-center">
+          <h3 class="font-big text-gray-700 mb-4 flex items-center">
             <i class="fas fa-battery-three-quarters text-green-500 mr-2"></i> Cell Voltages
           </h3>
           <div id="modalCells" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-3"></div>
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
